Design fixes - Collapsed summary button is now shown by default (no need to hover) - Whan drag targets are shown, existing summaries now shrink (as before).

--- a/keshif.less
+++ b/keshif.less
@@ -152,6 +152,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         &:not([dropattrtype~="unique"]){
             .kshfChart[collapsed=false]{
                 .flex-grow(3);
+                .flex(3);
                 overflow: hidden;
             }
             .panel[hassummaries="true"] {
@@ -1158,7 +1159,10 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         }
     }
     .kshfChart[collapsed=true] {
-        .buttonSummaryCollapse::before{ content: "\f065" !important; }
+        .headerGroup > .header_display_control > .fa.buttonSummaryCollapse{
+            opacity: 1;
+            &::before{ content: "\f065" !important; }
+        }
     }
     .belowAttribs{ direction: ltr; }
 
